# swim-mtdnrc

./: .gitignore  DNRC_PLAN.md  README.md  mkdocs.yml  pyproject.toml
docs/: calibration.md  data-assets.md  index.md  repo-organization.md  requirements.txt
docs/notebooks/: 01_tongue_overview.ipynb  02_tongue_calibration_artifacts.ipynb  03_tongue_field_trace.ipynb  04_tongue_clustering_workflow.ipynb  05_tongue_crop_library.ipynb  06_tongue_scenario_demo.ipynb  index.md
docs/reference/: entry-points.md  known-issues.md
docs/stylesheets/: extra.css
docs/workflows/: sid-extraction.md  tongue-calibration.md  tongue-clustering-analysis.md  tongue-data-assembly.md  tongue-scenario-analysis.md
scripts/: run_assemble_sid.py  run_build_library.py  run_calibration.py  run_clustering.py  run_crosswalk.py  run_merge.py  run_merge_legacy.py  run_regression.py  run_scenario.py  run_streamflow.py
src/swim_mtdnrc/: __init__.py
src/swim_mtdnrc/analysis/: regression.py  streamflow.py
src/swim_mtdnrc/calibration/: assemble_sid.py  batch_calibrate.py  build_container.py  crosswalk.py  merge_legacy.py  prep_inputs.py
src/swim_mtdnrc/clustering/: clustering.py  crop_curves.py  crop_library.py  merge_extracts.py
src/swim_mtdnrc/extraction/: openet_etf.py  sid_diagnostics.py  sid_eta.py  sid_etf.py  sid_irr.py  sid_ndvi.py  sid_prepped.py  tongue_extract_cdl.py  tongue_extract_ndvi.py  tongue_extract_snodas.py  tongue_extract_ssebop.py
src/swim_mtdnrc/scenarios/: diagnostics.py  scenario_container.py  scenario_spec.py
tests/: test_crop_library.py  test_scenario.py
